[project]
name = "nova-scout"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = "^3.11"
dependencies = [
    "anthropic (>=0.100.0,<0.101.0)",
    "psycopg[binary] (>=3.3.4,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "ruff (>=0.15.12,<0.16.0)",
    "mypy (>=2.0.0,<3.0.0)"
]
